[gd_scene load_steps=8 format=2]

[ext_resource path="res://GridCell.png" type="Texture" id=1]
[ext_resource path="res://Interface.gd" type="Script" id=2]
[ext_resource path="res://Grid.gdns" type="Script" id=3]
[ext_resource path="res://Background/wallpaper2you_408805.jpg" type="Texture" id=4]
[ext_resource path="res://Benne-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_top = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_top = 2
font_data = ExtResource( 5 )

[node name="Interface" type="Node2D"]
script = ExtResource( 2 )

[node name="Grid" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 960, 540 )
scale = Vector2( 0.8, 0.8 )
z_index = -1
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ComputeButton" type="Button" parent="."]
margin_left = 261.0
margin_top = 152.0
margin_right = 410.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 1 )
text = "Compute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.411765, 0.207843, 0.105882, 0.462745 )
z_index = -2
texture = ExtResource( 4 )
centered = false

[node name="ComputeFile" type="Button" parent="."]
margin_left = 262.5
margin_top = 212.5
margin_right = 389.5
margin_bottom = 253.5
custom_fonts/font = SubResource( 2 )
text = "Compute File"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="add_step" from="Grid" to="." method="add_step"]
[connection signal="pressed" from="ComputeButton" to="." method="_on_Compute_pressed"]
[connection signal="pressed" from="ComputeFile" to="." method="compute_file"]
